--- a/site.master
+++ b/site.master
@@ -5,7 +5,7 @@
 	<meta charset="utf-8">
 	<title>dig - Digital Signature Provider</title>
 	<link href="content/site.css" rel="stylesheet" type="text/css" />
-	<asp:ContentPlaceHolder ID="HeadContent" runat="server" />
+	<link href="content/<%=PageName %>.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
 	<div id="container">
@@ -16,11 +16,11 @@
 
 		<form action="login.aspx" method="post">
 			<div id="login">
-				<label for="email">Email</label>
-				<input type="text" name="email" id="email">
+				<label for="login-email">Email</label>
+				<input type="text" name="login-email" id="login-email">
 
-				<label for="password">Password</label>
-				<input type="password" name="password" id="password">
+				<label for="login-password">Password</label>
+				<input type="password" name="login-password" id="login-password">
 
 				<input type="submit" value="Login">
 			</div>
