--- a/site.master
+++ b/site.master
@@ -14,17 +14,24 @@
 			<a href="/" id="logo"><img src="content/logo.png"></a>
 		</div>
 
-		<form action="login.aspx" method="post">
-			<div id="login">
-				<label for="login-email">Email</label>
-				<input type="text" name="login-email" id="login-email">
+		<% if (Login == null) { %>
+			<form action="login.aspx" method="post">
+				<div id="login">
+					<label for="login-email">Email</label>
+					<input type="text" name="e" id="login-email">
 
-				<label for="login-password">Password</label>
-				<input type="password" name="login-password" id="login-password">
+					<label for="login-password">Password</label>
+					<input type="password" name="p" id="login-password">
 
-				<input type="submit" value="Login">
+					<input type="submit" value="Login">
+				</div>
+			</form>
+		<% } else { %>
+			<div id="logout">
+				<%=Login.User.FirstName %> <%=Login.User.LastName %> -
+				<a href="logout.aspx">Logout</a>
 			</div>
-		</form>
+		<% } %>
 
 
 		<div id="content">
