--- a/site.master
+++ b/site.master
@@ -4,19 +4,19 @@
 <head>
 	<meta charset="utf-8">
 	<title>dig - Digital Signature Provider</title>
-	<link href="content/site.css" rel="stylesheet" type="text/css" />
-	<link href="content/<%=PageName %>.css" rel="stylesheet" type="text/css" />
+	<link href="/content/site.css" rel="stylesheet" type="text/css" />
+	<link href="/content/<%=PageName %>.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
 	<div id="container">
 
 		<div id="header">
-			<a href="/" id="logo"><img src="content/logo.png"></a>
+			<a href="/" id="logo"><img src="/content/logo.png"></a>
 		</div>
 
 		<% if (Login == null) { %>
 			<div id="login">
-				<form action="login.aspx" method="post">
+				<form action="/login.aspx" method="post">
 					<label for="login-email">Email</label>
 					<input type="text" name="e" id="login-email">
 
@@ -29,8 +29,8 @@
 		<% } else { %>
 			<div id="logout">
 				<%=Login.User.FirstName %> <%=Login.User.LastName %> -
-				<a href="dashboard.aspx">Dashboard</a> -
-				<a href="logout.aspx">Logout</a>
+				<a href="/dashboard/">Dashboard</a> -
+				<a href="/logout.aspx">Logout</a>
 			</div>
 		<% } %>
 
