--- a/content/dashboard_keys.css
+++ b/content/dashboard_keys.css
@@ -1,9 +1,9 @@
-﻿.invalid {
+﻿.invalid-key {
 	color: #777;
 	text-decoration: line-through;
 }
 
-.key span {
+.valid-key span {
 	display: inline-block;
 	width: 25em;
 }
