--- a/site.master
+++ b/site.master
@@ -29,7 +29,7 @@
 		<% } else { %>
 			<div id="logout">
 				<%=Login.User.FirstName %> <%=Login.User.LastName %> -
-				<a href="/dashboard/">Dashboard</a> -
+				<a href="/dashboard/keys.aspx">Key Chain</a> -
 				<a href="/logout.aspx">Logout</a>
 			</div>
 		<% } %>
