--- a/content/default.css
+++ b/content/default.css
@@ -14,6 +14,11 @@
 	margin: 2px 0 4em 210px;
 }
 
+#movie {
+	display: none;
+	margin-bottom: 20px;
+}
+
 .button {
 	position: relative;
 	display: inline-block;
