--- a/content/default.css
+++ b/content/default.css
@@ -1,10 +1,13 @@
 /* BODY */
 
 #content {
-	padding-top: 4em;
 	height: 512px;
 	text-align: center;
 	background: url(lock.png) no-repeat center 10px;
+}
+
+#text {
+	padding-top: 4em;
 }
 
 #blurb {
@@ -16,7 +19,7 @@
 
 #movie {
 	display: none;
-	margin-bottom: 20px;
+	margin: 20px 0;
 }
 
 .button {
