--- a/site.master
+++ b/site.master
@@ -31,6 +31,7 @@
 			<div id="logout">
 				<%=Login.User.FirstName %> <%=Login.User.LastName %> -
 				<a href="/dashboard/keys.aspx">Key Chain</a> -
+				<a href="/download.aspx">Download</a> -
 				<a href="/logout.aspx">Logout</a>
 			</div>
 		<% } %>
