--- a/content/register.css
+++ b/content/register.css
@@ -7,10 +7,6 @@
 	float: left;
 }
 
-#register input {
-	clear: right;
-}
-
 #submit {
 	margin-top: 1em;
 	margin-left: 120px;
@@ -22,12 +18,25 @@
 
 #register {
 	margin-top: 2em;
-	display: inline-block;
-	width: 320px;
 	text-align: left;
+	margin-left: 225px;
 }
 
 #register input[type=text],
 #register input[type=password] {
 	width: 180px;
+}
+
+
+#credit-card {
+	margin: 30px 0;
+}
+
+#credit-card p {
+	width: 300px;
+	font-size: small;
+}
+
+#credit-card .note {
+	font-size: small;
 }
